Overflow fix 2

--- a/napelem-ui/src/app/components/diagrams/msmdata/measurement-data/measurement.data.component.css
+++ b/napelem-ui/src/app/components/diagrams/msmdata/measurement-data/measurement.data.component.css
@@ -1,3 +1,8 @@
+.container {
+	overflow: auto;
+	height: calc(100vh - 45px);
+}
+
 table {
 	width: 100%;
 	max-width: 750px;
