--- a/napelem-ui/src/styles.css
+++ b/napelem-ui/src/styles.css
@@ -6,5 +6,6 @@
 
 body {
     height: 100vh;
+    overflow: hidden;
     margin: 0%;
 }
